--- a/src/app/main/components/add-player/add-player.component.scss
+++ b/src/app/main/components/add-player/add-player.component.scss
@@ -1,11 +1,11 @@
-.add-event {
-    width: 350px;
+.add-player {
+    width: 400px;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 200px auto 0 auto;
 }
-.add-event__title {
+.add-player__title {
     font-size: 30px;
     text-align: center;
     padding-bottom: 10px;
@@ -15,28 +15,28 @@ td {
     text-align: end;
     padding: 15px 0;
 }
-.add-event__subtitle {
+.add-player__subtitle {
     font-size: 18px;
     margin-right: 10px;
 }
-.add-event__input {
+.add-player__input {
     height: 25px;
     font-size: 18px;
     padding-left: 5px;
 }
-.add-event__err {
+.add-player__err {
     position: absolute;
     display: block;
     font-size: 16px;
     color: red;
 }
-.add-event__btn {
+.add-player__btn {
     width: 228px;
     height: 29px;
     font-size: 16px;
     border: 1px solid #ccc;
     cursor: pointer;
 }
-.add-event__btn:hover {
+.add-player__btn:hover {
     background: #E0E4E7;
 }
