--- a/src/app/main/components/add-player/add-player.component.html
+++ b/src/app/main/components/add-player/add-player.component.html
@@ -9,7 +9,7 @@
                     <mat-form-field appearance="fill">
                         <mat-label>Команда</mat-label>
                         <mat-select formControlName="team">
-                            <mat-option *ngFor="let team of teams.results" [value]="team.id">
+                            <mat-option *ngFor="let team of teams?.results" [value]="team.id">
                                 {{team.full_name}}
                             </mat-option>
                         </mat-select>
