--- a/src/app/main/components/teams/teams.component.scss
+++ b/src/app/main/components/teams/teams.component.scss
@@ -1,11 +1,11 @@
-.main {
+.teams {
     width: 550px;
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 20px 30px;
-    margin: 100px auto 0 auto;
+    margin: 200px auto 0 auto;
 }
-.main__title {
+.teams__title {
     font-size: 30px;
     text-align: center;
     padding-bottom: 10px;
@@ -24,7 +24,7 @@ td {
 .tr:hover {
     background-color: #f5f5f5;
 }
-.main__btn {
+.teams__btn {
     width: 100%;
     height: 29px;
     font-size: 16px;
@@ -32,6 +32,6 @@ td {
     border: 1px solid #ccc;
     margin-top: 20px;
 }
-.main__btn:hover {
+.teams__btn:hover {
     background: #E0E4E7;
 }
