--- a/src/app/main/components/add-location/add-location.component.html
+++ b/src/app/main/components/add-location/add-location.component.html
@@ -1,4 +1,4 @@
-<button class="add-location__btn" [routerLink]="['../home']">назад</button>
+<button class="add-location__btn" [routerLink]="['../locations']">назад</button>
 <div class="add-location">
     <p class="add-location__title">Добавить место</p>
     <form [formGroup]="addLocationForm" novalidate (ngSubmit)="sendService()">
