--- a/src/app/main/components/add-team/add-team.component.html
+++ b/src/app/main/components/add-team/add-team.component.html
@@ -1,4 +1,4 @@
-<button class="add-team__btn" [routerLink]="['../home']">назад</button>
+<button class="add-team__btn" [routerLink]="['../teams']">назад</button>
 <div class="add-team">
     <p class="add-team__title">Добавить команду</p>
     <form [formGroup]="addTeamForm" novalidate (ngSubmit)="sendService()">
