--- a/src/app/main/components/locations/locations.component.html
+++ b/src/app/main/components/locations/locations.component.html
@@ -2,11 +2,11 @@
     <p class="locations__title">Список мест</p>
     <table>
         <tr>
-            <td>ID</td>
+            <!-- <td>ID</td> -->
             <td>Название</td>
         </tr>
         <tr class="tr" *ngFor="let location of locations?.results">
-            <td>{{location.id}}</td>
+            <!-- <td>{{location.id}}</td> -->
             <td>{{location.name}}</td>
         </tr>
     </table>
