--- a/src/app/main/components/teams/teams.component.html
+++ b/src/app/main/components/teams/teams.component.html
@@ -2,12 +2,12 @@
     <p class="teams__title">Список команд</p>
     <table>
         <tr>
-            <td>ID</td>
+            <!-- <td>ID</td> -->
             <td>Название</td>
         </tr>
         <tr class="tr" *ngFor="let team of teams?.results">
-            <td>{{team.id}}</td>
-            <td>{{team.full_name}}</td>
+            <!-- <td>{{team.id}}</td> -->
+            <td [routerLink]="['../players', team.id]">{{team.full_name}}</td>
         </tr>
     </table>
     <button class="teams__btn" [routerLink]="['../add-team']">Добавить команду</button>
