--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<button class="btn" (click)="logout($event)">Выйти из системы</button>
+<!-- <button class="btn" (click)="logout($event)">Выйти из системы</button> -->
 
 <router-outlet></router-outlet>
