--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -1,4 +1,5 @@
 <button class="event__btn" (click)="back()">назад</button>
+<div style="display: flex;">
 <div class="event">
     <p class="event__title">Событие</p>
 
@@ -33,6 +34,8 @@
     </form>
 </div>
 
+<div class="event">
+    <p class="event__title">Игроки</p>
 <table>
     <tr>
         <td>Номер</td>
@@ -45,3 +48,5 @@
         </td>
     </tr>
 </table>
+</div>
+</div>
