--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -1,25 +1,18 @@
-<h1 style="text-align: center;">Главная</h1>
-<h3 style="text-align: center;">Привет {{mydata.first_name}} {{mydata.last_name}}!</h3>
-
-<button [routerLink]="['../teams']">Команды</button>
-<button [routerLink]="['../players']">Игроки</button>
-<button [routerLink]="['../locations']">Места</button>
-
-<div class="main">
-    <p class="main__title">Список событий</p>
+<div class="home">
+    <p class="home__title">Список событий</p>
     <table>
         <tr>
-            <td>ID</td>
+            <!-- <td>ID</td> -->
             <td>Время</td>
             <td>Место</td>
             <td>Цена</td>
         </tr>
         <tr class="tr" *ngFor="let event of events?.results">
-            <td [routerLink]="['../event', event.id]">{{event.id}}</td>
+            <!-- <td [routerLink]="['../event', event.id]">{{event.id}}</td> -->
             <td [routerLink]="['../event', event.id]">{{event.time_start}}</td>
             <td [routerLink]="['../event', event.id]">{{event.location.name}}</td>
             <td [routerLink]="['../event', event.id]">{{event.price}}</td>
         </tr>
     </table>
-    <button class="main__btn" [routerLink]="['../add-event']">Добавить событие</button>
+    <button class="home__btn" [routerLink]="['../add-event']">Добавить событие</button>
 </div>
