--- a/src/app/main/components/players/players.component.html
+++ b/src/app/main/components/players/players.component.html
@@ -1,14 +1,15 @@
+<button class="players__btn" style="width: 228px;" (click)="back()">назад</button>
 <div class="players">
     <p class="players__title">Список игроков</p>
     <table>
         <tr>
-            <td>ID</td>
+            <!-- <td>ID</td> -->
             <td>Номер</td>
         </tr>
-        <tr class="tr" *ngFor="let player of players?.results">
-            <td>{{player.id}}</td>
+        <tr class="tr" *ngFor="let player of team?.players">
+            <!-- <td>{{player.id}}</td> -->
             <td>{{player.number}}</td>
         </tr>
     </table>
-    <button class="players__btn" [routerLink]="['../add-player']">Добавить игрока</button>
+    <button class="players__btn" [routerLink]="['../../add-player']">Добавить игрока</button>
 </div>
