--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header__container">
     <div class="logo__container">
         <div class="logo"></div>
-        <p class="logo__title">FreeTeamCollaboration</p>
+        <p class="logo__title">FreeTeam</p>
     </div>
 
     <div>
