--- a/src/app/main/components/add-player/add-player.component.scss
+++ b/src/app/main/components/add-player/add-player.component.scss
@@ -1,14 +1,20 @@
+$grey: #CCDBDC;
+$light: #f1f1f1;
+$turquoise: #80CED7;
+$blue: #007EA7;
+$dark: #003249;
 .add-player {
     width: 400px;
-    border: 1px solid #ccc;
+    border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
 }
-.add-player__title {
+.title {
     font-size: 30px;
     text-align: center;
     padding-bottom: 10px;
+    color: $dark;
 }
 td {
     position: relative;
@@ -20,9 +26,12 @@ td {
     margin-right: 10px;
 }
 .add-player__input {
-    height: 25px;
+    width: 240px;
+    height: 50px;
     font-size: 18px;
-    padding-left: 5px;
+    padding-left: 10px;
+    border: 1px solid $grey;
+    border-radius: 5px;
 }
 .add-player__err {
     position: absolute;
@@ -34,9 +43,22 @@ td {
     width: 228px;
     height: 29px;
     font-size: 16px;
-    border: 1px solid #ccc;
+    border: 1px solid $grey;
     cursor: pointer;
 }
 .add-player__btn:hover {
-    background: #E0E4E7;
+    background: $grey;
+}
+.btn {
+    width: 100%;
+    height: 29px;
+    font-size: 16px;
+    cursor: pointer;
+    border: 1px solid $grey;
+    background: $blue;
+    margin-top: 20px;
+    color: $light;
+}
+.btn:hover {
+    background: $turquoise;
 }
