--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -1,13 +1,12 @@
-<div class="header__container">
-    <div class="logo__container">
-        <div class="logo"></div>
-        <p class="logo__title">FreeTeam</p>
+<div class="header">
+    <div class="logo">
+        <img src="../../../../assets/img/game1.png" alt="logo">
     </div>
 
     <div>
-        <button routerLinkActive="active" class="btn" [routerLink]="['./home']">Главная</button>
-        <button routerLinkActive="active" class="btn" [routerLink]="['./teams']">Команды</button>
-        <button routerLinkActive="active" class="btn" [routerLink]="['./locations']">Места</button>
+        <a routerLinkActive="active" class="link" [routerLink]="['./home']">Главная</a>
+        <a routerLinkActive="active" class="link" [routerLink]="['./teams']">Команды</a>
+        <a routerLinkActive="active" class="link" [routerLink]="['./locations']">Места</a>
     </div>
 
     <div class="box">
