--- a/src/app/main/components/header/header.component.scss
+++ b/src/app/main/components/header/header.component.scss
@@ -1,76 +1,45 @@
-.header__container {
-    background-color: lightblue;
+$grey: #CCDBDC;
+$light: #f1f1f1;
+$turquoise: #80CED7;
+$blue: #007EA7;
+$dark: #003249;
+.header {
+    position: fixed;
+    top: 0; right: 0; left: 0;
+    background-color: $turquoise;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.8);
 }
-.avatar {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: green;
-}
-.router-outlet {
-    padding: 20px;
-}
-.logo__container {
+.logo {
     display: flex;
     align-items: center;
     width: 400px;
 }
-.logo {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: red;
+.link {
+    text-decoration: none;
+    font-size: 20px;
+    color: $light;
+    padding: 36px 73px;
 }
-.logo__title {
-    font-size: 30px;
-    font-weight: 600;
-    margin-left: 5px;
+.active {
+    color: $blue;
+    text-decoration: underline;
+    background-color: $light;
 }
 .box {
     width: 400px;
     display: flex;
     justify-content: flex-end;
 }
-
-
-.header {
-    width: 550px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px 30px;
-    margin: 100px auto 0 auto;
+.avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: $blue;
 }
-.header__title {
-    font-size: 30px;
-    text-align: center;
-    padding-bottom: 10px;
-}
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-td {
-    border-bottom: 1px solid #ccc;
-    padding: 10px 30px;
-    font-size: 18px;
-    text-align: center;
-    cursor: pointer;
-}
-.tr:hover {
-    background-color: #f5f5f5;
-}
-.header__btn {
-    width: 100%;
-    height: 29px;
-    font-size: 16px;
-    cursor: pointer;
-    border: 1px solid #ccc;
-    margin-top: 20px;
-}
-.header__btn:hover {
-    background: #E0E4E7;
+.router-outlet {
+    padding: 20px;
 }
