--- a/src/app/main/components/player/player.component.scss
+++ b/src/app/main/components/player/player.component.scss
@@ -1,6 +1,11 @@
+$grey: #CCDBDC;
+$light: #f1f1f1;
+$turquoise: #80CED7;
+$blue: #007EA7;
+$dark: #003249;
 .players {
     width: 550px;
-    border: 1px solid #ccc;
+    border: 1px solid $grey;
     border-radius: 5px;
     padding: 20px 30px;
     margin: 100px auto 0 auto;
@@ -15,23 +20,27 @@ table {
     width: 100%;
 }
 td {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid $grey;
     padding: 10px 30px;
     font-size: 18px;
     text-align: center;
     cursor: pointer;
 }
 .tr:hover {
-    background-color: #f5f5f5;
+    background-color: $grey;
 }
 .players__btn {
     width: 100%;
     height: 29px;
     font-size: 16px;
     cursor: pointer;
-    border: 1px solid #ccc;
+    border: 1px solid $grey;
     margin-top: 20px;
 }
 .players__btn:hover {
-    background: #E0E4E7;
+    background: $grey;
+}
+.subtitle {
+    color: $dark;
+    font-size: 20px;
 }
