--- a/src/app/main/components/players/players.component.html
+++ b/src/app/main/components/players/players.component.html
@@ -1,10 +1,10 @@
-<button class="players__btn" style="width: 228px;" (click)="back()">назад</button>
-<div class="players">
-    <p>Полное название команды: {{team?.full_name}}</p>
-    <p>Сокращенное название команды: {{team?.short_name}}</p>
-    <p class="players__title">Список игроков</p>
+<button class="btn" style="width: 228px;" (click)="back()">назад</button>
+<div class="container">
+    <p class="subtitle">Полное название команды: {{team?.full_name}}</p>
+    <p class="subtitle" style="margin-bottom: 10px;">Сокращенное название команды: {{team?.short_name}}</p>
+    <p class="title">Список игроков</p>
     <table>
-        <tr>
+        <tr class="tr__head">
             <td>Номер</td>
             <td>Имя</td>
         </tr>
@@ -13,5 +13,5 @@
             <td [routerLink]="['./player', player.id]">{{player?.user.full_name}}</td>
         </tr>
     </table>
-    <button class="players__btn" [routerLink]="['../../add-player']">Добавить игрока</button>
+    <button class="btn" [routerLink]="['../../add-player']">Добавить игрока</button>
 </div>
