change style & add version & add name

--- a/src/app/main/components/user/user.component.html
+++ b/src/app/main/components/user/user.component.html
@@ -1,2 +1,5 @@
-<p class="title">Привет {{mydata.first_name}} {{mydata.last_name}}!</p>
-<button class="btn" (click)="logout($event)">Выйти из системы</button>
+<div class="container">
+    <p class="title">Привет {{mydata.first_name}} {{mydata.last_name}}!</p>
+    <button class="btn" (click)="logout($event)">Выйти из системы</button>
+    <p class="subtitle">Free Team Games 1.1</p>
+</div>
