--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -35,10 +35,12 @@
     <p class="title">Участники события</p>
 <table>
     <tr class="tr__head">
+        <td>Имя</td>
         <td>Команда</td>
         <td>Номер</td>
     </tr>
     <tr class="tr" *ngFor="let pl of event?.players">
+        <td>{{pl.user.full_name}}</td>
         <td>{{pl.team.full_name}}</td>
         <td>{{pl.number}}</td>
     </tr>
