--- a/src/app/main/components/players/players.component.html
+++ b/src/app/main/components/players/players.component.html
@@ -1,7 +1,8 @@
 <button class="btn" style="width: 228px;" (click)="back()">назад</button>
 <div class="container">
     <p class="subtitle">Полное название команды: {{team?.full_name}}</p>
-    <p class="subtitle" style="margin-bottom: 10px;">Сокращенное название команды: {{team?.short_name}}</p>
+    <p class="subtitle">Сокращенное название команды: {{team?.short_name}}</p>
+    <p class="subtitle" style="margin-bottom: 10px;">Количество игроков: {{count}}</p>
     <p class="title">Список игроков</p>
     <table>
         <tr class="tr__head">
@@ -13,5 +14,5 @@
             <td [routerLink]="['./player', player.id]">{{player?.user.full_name}}</td>
         </tr>
     </table>
-    <button class="btn" [routerLink]="['../../add-player']">Добавить игрока</button>
+    <button class="btn" [routerLink]="['./add-player', id]">Добавить игрока</button>
 </div>
