--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -7,7 +7,7 @@
             <td>Цена</td>
             <td>Кол-во игроков</td>
         </tr>
-        <tr class="tr" *ngFor="let event of events?.results">
+        <tr class="tr" *ngFor="let event of currentEvents">
             <td [routerLink]="['../event', event.id]">{{event.time_start | date: 'dd.MM.YYYY HH:mm'}}</td>
             <td [routerLink]="['../event', event.id]">{{event.location.name}}</td>
             <td [routerLink]="['../event', event.id]">{{event.price}}</td>
