create func checkPlayer

--- a/src/app/main/components/event/event.component.html
+++ b/src/app/main/components/event/event.component.html
@@ -26,7 +26,7 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <button class="event__btn" [disabled]="addStatusForm.invalid">Приду</button>
+        <button class="event__btn" [disabled]="addStatusForm.invalid">{{btnTitle}}</button>
     </div>
     </form>
 </div>
